Refactor app.js and update dependencies for improved functionality
- Refactored route handling in app.js to use a centralized routes object for better organization.
- Added support for Markdown rendering with the inclusion of the MarkdownIt package.
- Updated session configuration for improved security settings.
- Enhanced error handling and 404 response rendering.
- Updated package.json and package-lock.json to reflect new dependencies and version updates, including express and markdown-it.
- Adjusted static file serving and layout includes in EJS templates for consistency.
- Changed the restart script to reference app.js instead of index.js.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/user_feedback.ejs') %>
+<%- include( '../partials/user_feedback.ejs' ); %>
 <hgroup class="hero text-left">
     <% if( typeof first_name==="undefined" ){ %>
     <h1>Welcome to the workshop registration</h1>
