--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-    <%- include('../partials/head') %>
+    <%- include( "../partials/head" ); %>
     <body class="cover-l center-l">
-        <%- include('../partials/header') %>
+        <%- include( "../partials/header" ); %>
         <main>
-            <%- include('../partials/user_feedback.ejs') %>
+            <%- include( "../partials/user_feedback.ejs" ); %>
             <%- body %>
         </main>
-        <%- include('../partials/footer') %>
-        <%- include('../partials/resource-scripts') %>
+        <%- include( "../partials/footer" ); %>
+        <%- include( "../partials/resource-scripts" ); %>
     </body>
 </html>
