--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
     <nav>
         <a href="/" class="logo">
-          <img src="logo.png" alt="" height="32" width="32"/>
+          <img src="/logo.png" alt="" height="32" width="32"/>
           Colourfully Digital
         </a>
         <ul>
