--- a/views/pages/dependents.ejs
+++ b/views/pages/dependents.ejs
@@ -1,51 +1,45 @@
-<%- include('../layouts/head') %>
-<main>
-    <div class="container">
-        <%- include('../partials/user_feedback') %>
-        <h2>My family: </h2>
-        <div class="row">
-            <div class="col">
-                <p>Here is your list of children and dependent.</p>
-            </div>
-            <div class="col d-flex align-items-end justify-content-end ">
-                <input type="button" class="btn btn-primary edit-dependent" value="Add a member">
-            </div>
-        </div>
-        <table class="table table-striped table-dark">
-            <thead>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Age</th>
-                    <th>Gender</th>
-                    <th>Modify</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% if ( dependents !== []) { %>
-                <% dependents.forEach(e => { %>
-                <tr>
-                    <td><%= e.first_name %></td>
-                    <td><%= e.last_name %></td>
-                    <td><%= e.birthday %></td>
-                    <td><%= e.gender %></td>
-                    <td>
-                        <button class="btn btn-primary edit-dependent" data-id="<%= e.id %>">edit</button>
-                    </td>
-                </tr>
-                <% }) %>
-                <% } %>
+<%- include('../partials/user_feedback') %>
+<hgroup>
+    <h1>My family:</h1>
+    <p>Here is your list of children and dependent.</p>
+    <input type="button" value="Add a member">
+</hgroup>
 
-            </tbody>
-        </table>
+<section>
+    <table>
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Age</th>
+                <th>Gender</th>
+                <th>Modify</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% if ( dependents !== []) { %>
+            <% dependents.forEach(e => { %>
+            <tr>
+                <td><%= e.first_name %></td>
+                <td><%= e.last_name %></td>
+                <td><%= e.birthday %></td>
+                <td><%= e.gender %></td>
+                <td>
+                    <button class="btn btn-primary edit-dependent" data-id="<%= e.id %>">edit</button>
+                </td>
+            </tr>
+            <% }) %>
+            <% } %>
+
+        </tbody>
+    </table>
+</section>
 
         <% if(Array.isArray(dependents) && dependents.length === 0) { %>
         <div class="row">
-
             <div class="col d-flex justify-content-center">
                 <p>You don't have any family member saved. Click 'add a member?' button</p>
             </div>
-
         </div>
         <% } %>
 
