--- a/views/pages/sign_up_page.ejs
+++ b/views/pages/sign_up_page.ejs
@@ -1,74 +1,71 @@
-<%- include('../layouts/head') %>
-<main>
-    <div class="container">
-        <%- include('../partials/user_feedback') %>
-        <div class="sign-up-container">
-            <h2>Sign Up!</h2>
-            <form name="sign_up_form" action='/sign_up' method="post" class="needs-validation">
-                <div class="row">
-                    <!-- User's first name -->
-                    <div data-mdb-input-init class="form-outline mb-4 col">
-                        <label class="form-label" for="name_first_input">Your first name:</label>
-                        <input type="text" id="name_first_input" class="form-control" name="f_name" required />
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <!-- User's Last name -->
-                    <div data-mdb-input-init class="form-outline mb-4 col">
-                        <label class="form-label" for="name_last_input">Your last name:</label>
-                        <input type="text" id="name_last_input" class="form-control" name="l_name" required />
-                    </div>
+<%- include( '../partials/user_feedback.ejs' ) %>
+<div class="sign-up-container">
+    <h2>Sign Up!</h2>
+    <form name="sign_up_form" action='/sign_up' method="post" class="needs-validation">
+        <div class="row">
+            <!-- User's first name -->
+            <div data-mdb-input-init class="form-outline mb-4 col">
+                <label class="form-label" for="name_first_input">Your first name:</label>
+                <input type="text" id="name_first_input" class="form-control" name="f_name" required />
+                <div class="valid-feedback">
+                    Looks good!
                 </div>
-
-
-                <div class="row">
-                    <!-- Email input -->
-                    <div data-mdb-input-init class="form-outline mb-4 col">
-                        <label class="form-label" for="email_input">Email address:</label>
-                        <input type="email" id="email_input" class="form-control" name="email" required />
-                    </div>
-                    <!-- Phone input -->
-                    <div data-mdb-input-init class="form-outline mb-4 col">
-                        <label class="form-label" for="phone_input">Phone Number:</label>
-                        <input type="tel" id="phone_input" class="form-control" name="phone_num" required />
-                    </div>
-                </div>
-                <!-- Preferred method of contact -->
-                <div class="mb-3">
-                    <label class="form-label">Preferred Contact Method: </label>
-                    <div class="d-flex justify-content-start align-items-start">
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="pref_moc" value="text" required>
-                            <label class="form-check-label" for="textMessage">Text Message</label>
-                        </div>
-                        <div class="form-check" style="padding-left: 10%;">
-                            <input class="form-check-input" type="radio" name="pref_moc" value="phone" required>
-                            <label class="form-check-label" for="phoneCall">Phone Call</label>
-                        </div>
-                        <div class="form-check" style="padding-left: 10%;">
-                            <input class="form-check-input" type="radio" name="pref_moc" value="email" required>
-                            <label class="form-check-label" for="email">Email</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- Password input -->
-                    <div data-mdb-input-init class="form-outline mb-4 col">
-                        <label class="form-label" for="password_input">Password:</label>
-                        <input type="password" id="password_input" class="form-control" name="password" required />
-                    </div>
-
-                    <!-- Password Repeat -->
-                    <div data-mdb-input-init class="form-outline mb-4 col">
-                        <label class="form-label" for="passw_repeat_input">Confirm password:</label>
-                        <input type="password" id="passw_repeat_input" class="form-control" name="password_confirm" required />
-                    </div>
-                </div>
-                <!-- Submit button -->
-                <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Register</button>
-            </form>
+            </div>
+            <!-- User's Last name -->
+            <div data-mdb-input-init class="form-outline mb-4 col">
+                <label class="form-label" for="name_last_input">Your last name:</label>
+                <input type="text" id="name_last_input" class="form-control" name="l_name" required />
+            </div>
         </div>
-    </div>
+
+
+        <div class="row">
+            <!-- Email input -->
+            <div data-mdb-input-init class="form-outline mb-4 col">
+                <label class="form-label" for="email_input">Email address:</label>
+                <input type="email" id="email_input" class="form-control" name="email" required />
+            </div>
+            <!-- Phone input -->
+            <div data-mdb-input-init class="form-outline mb-4 col">
+                <label class="form-label" for="phone_input">Phone Number:</label>
+                <input type="tel" id="phone_input" class="form-control" name="phone_num" required />
+            </div>
+        </div>
+        <!-- Preferred method of contact -->
+        <div class="mb-3">
+            <label class="form-label">Preferred Contact Method: </label>
+            <div class="d-flex justify-content-start align-items-start">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="pref_moc" value="text" required>
+                    <label class="form-check-label" for="textMessage">Text Message</label>
+                </div>
+                <div class="form-check" style="padding-left: 10%;">
+                    <input class="form-check-input" type="radio" name="pref_moc" value="phone" required>
+                    <label class="form-check-label" for="phoneCall">Phone Call</label>
+                </div>
+                <div class="form-check" style="padding-left: 10%;">
+                    <input class="form-check-input" type="radio" name="pref_moc" value="email" required>
+                    <label class="form-check-label" for="email">Email</label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Password input -->
+            <div data-mdb-input-init class="form-outline mb-4 col">
+                <label class="form-label" for="password_input">Password:</label>
+                <input type="password" id="password_input" class="form-control" name="password" required />
+            </div>
+
+            <!-- Password Repeat -->
+            <div data-mdb-input-init class="form-outline mb-4 col">
+                <label class="form-label" for="passw_repeat_input">Confirm password:</label>
+                <input type="password" id="passw_repeat_input" class="form-control" name="password_confirm" required />
+            </div>
+        </div>
+        <!-- Submit button -->
+        <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Register</button>
+    </form>
+</div>
+</div>
 </main>
 <%- include('../layouts/footer') %>
