--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="center-l">
     <p>&copy;2024 Colourfully Digital. All rights reserved.</p>
     <div>
-        <a href="/about">About Us</a>
+        <a href="/about">About</a>
     </div>
     <div>
         <a href="/contact">Contact</a>
