--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="<%= description %>">
     <meta name="keywords" content="STEM, diversity, inclusion, BIPOC, youth, technology, education">
     <meta name="author" content="Colourfully Digital">
-    
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -17,7 +17,7 @@
     <meta name="application-name" content="Colourfully.Digital">
     <meta name="msapplication-TileColor" content="#77e07f">
     <meta name="theme-color" content="#ffffff">
-        
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.colourfully.digital/">
@@ -43,12 +43,14 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T9JNTGCLF9"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag('config', 'G-T9JNTGCLF9');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-T9JNTGCLF9');
     </script>
 
 </head>
-
