--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,16 @@
-<footer class="center-l">
-    <p>&copy;2024 Colourfully Digital. All rights reserved.</p>
-    <div>
-        <a href="/about">About</a>
-    </div>
-    <div>
-        <a href="/contact">Contact</a>
-    </div>
-    <div>
-        <a href="/privacy">Privacy Policy</a>
+<footer>
+    <p style="text-align: center;">&copy;2024 Colourfully Digital. All rights reserved.</p>
+
+    <div class="grid">
+
+        <div>
+            <a href="/about">About</a>
+        </div>
+        <div>
+            <a href="/contact">Contact</a>
+        </div>
+        <div>
+            <a href="/privacy">Privacy Policy</a>
+        </div>
     </div>
 </footer>
