--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,13 +3,13 @@
 
     <div class="grid">
 
-        <div>
+        <div style="text-align: center;">
             <a href="/about">About</a>
         </div>
-        <div>
+        <div style="text-align: center;">
             <a href="/contact">Contact</a>
         </div>
-        <div>
+        <div style="text-align: center;">
             <a href="/privacy">Privacy Policy</a>
         </div>
     </div>
