--- a/views/pages/programs.ejs
+++ b/views/pages/programs.ejs
@@ -1,8 +1,37 @@
-<%- include('../partials/head') %>
-<main>
+  <%- include('../partials/head') %>
+  <main>
     <div class="container">
 
-        <h1>Upcoming Events:</h1>
+      <h1>Programs and Events:</h1>
 
+      <% if(Array.isArray(dashboard) && dashboard.length === 0) { %>
 
-</main>
+      <div class="row">
+        <div style="text-align: center;">
+          <p>There are no new upcoming programs or events. Check again soon!</p>
+        </div>
+      </div>
+
+      <% } else {%>
+
+      <% dashboard.forEach(e => { %>
+      <article>
+        <div role="group" style="margin: 0;">
+          <!-- <div style="align-items: start;"> -->
+          <h5> <%= e.name %></h5>
+          <!-- </div> -->
+          <!-- <div style="text-align: end;"> -->
+          <p style="text-align: end;"><strong> <%= e.utc_start_date %></strong></p>
+          <!-- </div> -->
+        </div>
+        <hr>
+        <p> <%= e.description %></p>
+        <p> <strong>Location:</strong> <%= e.location %></p>
+
+        <p> <strong>Capacity:</strong> <%= e.capacity %>%</p>
+        <p><strong>Status:</strong> <%= e.status%></p>
+      </article>
+      <% }) %>
+
+      <% } %>
+  </main>
