--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,46 +1,46 @@
 <header>
-    <nav>
-        <a href="/" class="logo">
-            <img src="logo.png" alt="" height="32" width="32" />
-            Colourfully Digital
-        </a>
-        <ul>
+  <nav>
+    <a href="/" class="logo">
+      <img src="logo.png" alt="" height="32" width="32" />
+      Colourfully Digital
+    </a>
+    <ul>
+      <li>
+        <a aria-current="page" href="/">Home</a>
+      </li>
+      <li>
+        <a href="/contact">Contact</a>
+      </li>
+      <li>
+        <a href="/about">About</a>
+      </li>
+      <% if (isLoggedIn) { %>
+      <li>
+        <a href="/dependents">Family</a>
+      </li>
+      <li>
+        <details class="dropdown">
+          <summary role="button">
+            <img src="/person-circle.svg" alt="Profile picture">
+          </summary>
+          <ul dir="rtl">
+            <li><a class="dropdown-item" href="#">Account</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
             <li>
-                <a aria-current="page" href="/">Home</a>
+              <hr class="dropdown-divider">
             </li>
-            <li>
-                <a href="/contact">Contact</a>
-            </li>
-            <li>
-                <a href="/about">About</a>
-            </li>
-            <% if (typeof first_name !=="undefined" ) { %>
-            <li>
-                <a href="/dependents">Family</a>
-            </li>
-            <li>
-                <details class="dropdown">
-                    <summary role="button">
-                        <img src="/person-circle.svg" alt="Profile picture">
-                    </summary>
-                    <ul dir="rtl">
-                        <li><a class="dropdown-item" href="#">Account</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="/sign_out">Log Out</a></li>
-                    </ul>
-                </details>
-            </li>
-            <% } else {%>
-            <li>
-                <a href="/sign_up">Sign Up</a>
-            </li>
-            <li>
-                <a href="/sign_in">Sign In</a>
-            </li>
-            <% } %>
-        </ul>
-    </nav>
+            <li><a class="dropdown-item" href="/sign_out">Log Out</a></li>
+          </ul>
+        </details>
+      </li>
+      <% } else {%>
+      <li>
+        <a href="/sign_up">Sign Up</a>
+      </li>
+      <li>
+        <a href="/sign_in">Sign In</a>
+      </li>
+      <% } %>
+    </ul>
+  </nav>
 </header>
