--- a/views/pages/programs.ejs
+++ b/views/pages/programs.ejs
@@ -2,7 +2,17 @@
   <main>
     <div class="container">
 
+      <% if (role === 'admin') { %>
+
       <h1>Programs and Events:</h1>
+      <div class="align-items: flex-end; width: auto;">
+        <input type="button" value="Create new Event">
+      </div>
+
+      <% } else { %>
+      <h1>Upcoming programs:</h1>
+      <% } %>
+
 
       <% if(Array.isArray(dashboard) && dashboard.length === 0) { %>
 
@@ -17,12 +27,8 @@
       <% dashboard.forEach(e => { %>
       <article>
         <div role="group" style="margin: 0;">
-          <!-- <div style="align-items: start;"> -->
           <h5> <%= e.name %></h5>
-          <!-- </div> -->
-          <!-- <div style="text-align: end;"> -->
           <p style="text-align: end;"><strong> <%= e.utc_start_date %></strong></p>
-          <!-- </div> -->
         </div>
         <hr>
         <p> <%= e.description %></p>
@@ -32,6 +38,10 @@
         <p><strong>Status:</strong> <%= e.status%></p>
       </article>
       <% }) %>
+
+      <div id="createUpdateEventForm">
+
+      </div>
 
       <% } %>
   </main>
