--- a/views/pages/sign_up_page.ejs
+++ b/views/pages/sign_up_page.ejs
@@ -1,65 +1,59 @@
 <main>
-    <div class="sign-up-container">
-        <h2>Sign Up!</h2>
-        <form name="sign_up_form" action='/sign_up' method="post" class="needs-validation">
-            <div class="grid">
-                <!-- User's first name -->
-                <div class="form-outline mb-4 col">
-                    <label for="name_first_input">Your first name:</label>
-                    <input type="text" id="name_first_input" name="f_name" required />
-                </div>
-                <!-- User's Last name -->
-                <div class="form-outline mb-4 col">
-                    <label for="name_last_input">Your last name:</label>
-                    <input type="text" id="name_last_input" name="l_name" required />
-                </div>
-            </div>
+  <div class="sign-up-container">
+    <h2>Sign Up!</h2>
+    <form name="sign_up_form" action='/sign_up' method="post" class="needs-validation">
+      <div class="grid">
+        <!-- User's first name -->
+        <div class="form-outline mb-4 col">
+          <label for="name_first_input">Your first name:</label>
+          <input type="text" id="name_first_input" name="f_name" required />
+        </div>
+        <!-- User's Last name -->
+        <div class="form-outline mb-4 col">
+          <label for="name_last_input">Your last name:</label>
+          <input type="text" id="name_last_input" name="l_name" required />
+        </div>
+      </div>
 
-            <div class="row">
-                <!-- Email input -->
-                <div>
-                    <label for="email_input">Email address:</label>
-                    <input type="email" id="email_input" name="email" required />
-                </div>
-                <!-- Phone input -->
-                <div>
-                    <label for="phone_input">Phone Number:</label>
-                    <input type="tel" id="phone_input" name="phone_num" required />
-                </div>
-            </div>
-            <div style="padding-top: 10px; padding-bottom: 40px;">
-                <!-- Preferred method of contact -->
-                <label class="form-label">Preferred Contact Method: </label>
-                <div class="grid">
-                    <div class="form-check">
-                        <input type="radio" name="pref_moc" value="text" required>
-                        <label for="textMessage">Text Message</label>
-                    </div>
-                    <div class="form-check">
-                        <input type="radio" name="pref_moc" value="phone" required>
-                        <label for="phoneCall">Phone Call</label>
-                    </div>
-                    <div class="form-check">
-                        <input type="radio" name="pref_moc" value="email" required>
-                        <label for="email">Email</label>
-                    </div>
-                </div>
-            </div>
-            <div class="grid">
-                <!-- Password input -->
-                <div data-mdb-input-init class="form-outline mb-4 col">
-                    <label for="password_input">Password:</label>
-                    <input type="password" id="password_input" name="password" required />
-                </div>
+      <div class="row">
+        <!-- Email input -->
+        <div>
+          <label for="email_input">Email address:</label>
+          <input type="email" id="email_input" name="email" required />
+        </div>
+        <!-- Phone input -->
+        <div>
+          <label for="phone_input">Phone Number:</label>
+          <input type="tel" id="phone_input" name="phone_num" required />
+        </div>
+      </div>
+      <div style="padding-top: 10px; padding-bottom: 40px;">
+        <!-- Preferred method of contact -->
+        <label class="form-label">Preferred Contact Method: </label>
+        <fieldset>
+          <input type="radio" name="pref_moc" value="text" id="textMessage" required>
+          <label for="textMessage">Text Message </label>
+          <input type="radio" name="pref_moc" value="phone" id="phoneCall" required>
+          <label for="phoneCall">Phone Call</label>
+          <input type="radio" name="pref_moc" value="email" id="emailID" required>
+          <label for="emailID">Email </label>
+        </fieldset>
+      </div>
+      <div class="grid">
+        <!-- Password input -->
+        <div data-mdb-input-init class="form-outline mb-4 col">
+          <label for="password_input">Password:</label>
+          <input type="password" id="password_input" name="password" required />
+        </div>
 
-                <!-- Password Repeat -->
-                <div data-mdb-input-init class="form-outline mb-4 col">
-                    <label for="passw_repeat_input">Confirm password:</label>
-                    <input type="password" id="passw_repeat_input" name="password_confirm" required />
-                </div>
-            </div>
-            <!-- Submit button -->
-            <button type="submit">Register</button>
-        </form>
-    </div>
+        <!-- Password Repeat -->
+        <div data-mdb-input-init class="form-outline mb-4 col">
+          <label for="passw_repeat_input">Confirm password:</label>
+          <input type="password" id="passw_repeat_input" name="password_confirm" required />
+        </div>
+      </div>
+      <!-- Submit button -->
+      <button type="submit">Register</button>
+    </form>
+  </div>
 </main>
