--- a/views/pages/programs.ejs
+++ b/views/pages/programs.ejs
@@ -1,18 +1,17 @@
   <%- include('../partials/head') %>
   <main>
-    <div class="container">
+    <div class="container" id="dashbaordDisplay">
 
       <% if (role === 'admin') { %>
 
       <h1>Programs and Events:</h1>
       <div class="align-items: flex-end; width: auto;">
-        <input type="button" value="Create new Event">
+        <input type="button" value="Create new Event" class="edit-programs">
       </div>
 
       <% } else { %>
       <h1>Upcoming programs:</h1>
       <% } %>
-
 
       <% if(Array.isArray(dashboard) && dashboard.length === 0) { %>
 
@@ -30,18 +29,87 @@
           <h5> <%= e.name %></h5>
           <p style="text-align: end;"><strong> <%= e.utc_start_date %></strong></p>
         </div>
+        <!-- line -->
         <hr>
         <p> <%= e.description %></p>
         <p> <strong>Location:</strong> <%= e.location %></p>
 
         <p> <strong>Capacity:</strong> <%= e.capacity %>%</p>
         <p><strong>Status:</strong> <%= e.status%></p>
+
+        <% if (role!=='nothing') { %>
+        <!-- line -->
+        <hr>
+        <div class="grid">
+          <input type="button" value="Register">
+          <% if (role==='admin') { %>
+          <input type="button" value="edit" class="edit-programs" data-id="<%= e.id %>">
+          <% } %>
+        </div>
+        <% } %>
       </article>
       <% }) %>
 
-      <div id="createUpdateEventForm">
 
-      </div>
 
       <% } %>
+    </div>
+
+    <% if(role === 'admin'){ %>
+    <div id="createUpdateEventForm">
+      <h2 id="createUpdateTitle">Create Event:</h2>
+      <form>
+        <fieldset>
+          <label>
+            First name
+            <input name="first_name" placeholder="First name" autocomplete="given-name" />
+          </label>
+          <label>
+            Email
+            <input type="email" name="email" placeholder="Email" autocomplete="email" />
+          </label>
+        </fieldset>
+
+        <input type="submit" value="Subscribe" />
+      </form>
+    </div>
+
+    <% } %>
   </main>
+
+  <script>
+    const userDashboard = document.getElementById('dashbaordDisplay');
+    const createUpdateForm = document.getElementById('createUpdateEventForm')
+
+    // save the values of the dashboard and form style display
+    const ogDashboardDisplayValue = userDashboard.style.display;
+    const ogCreateUpdateFormDValue = createUpdateForm.style.display;
+
+    // start off with the form being hidden
+    createUpdateForm.style.display = 'none';
+
+    // When users press the "create new event" button or "edit" 
+    Array.from(document.getElementsByClassName("edit-programs")).forEach(b => {
+      b.addEventListener("click", (e) => {
+        // Hid program dashboard and display the create form.
+        userDashboard.style.display = 'none';
+        createUpdateForm.style.display = ogCreateUpdateFormDValue;
+        if (b.dataset.id) {
+          console.log("Editing an event. ")
+          fetch(`/dependents/edit/${b.dataset.id}`).then(j => j.json()).then(d => {
+
+            document.getElementById("createUpdateEventForm").action = `/programs/update/${d.id}`;
+
+            console.log(d);
+
+          });
+        } else {
+          console.log("Creating a new Event");
+          document.getElementById('createUpdateEventForm').action = `/programs/create/`;
+
+        }
+      });
+    });
+
+    // Once the great form is closed, hid the form and display the dashboard (redirect to programs.)
+  </script>
